--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -71,6 +71,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-jdbc</artifactId>
+        </dependency>
     </dependencies>
 
     <!-- 关键：添加Spring Boot构建插件 -->
@@ -89,10 +93,10 @@
                 </configuration>
             </plugin>
 
-            <!-- 确保使用指定JDK版本编译 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
                 <configuration>
                     <source>22</source>
                     <target>22</target>
