--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "markdown-it": "^14.1.0",
+    "pinia": "^3.0.3",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1",
     "vue-simple-spinner": "^1.2.10"
