大型更新： 1.使用redis做session存储，不再使用jdbc（使用关系型数据库存储） 2.创建songs、song_votes两张表，持久化歌曲点赞、踩的数据 3.补充上述两表（修改）对应的模型层、数据层代码 4.优化docker打包过程，避免复制无用文件和反复下载依赖 5.前端优化了点赞、点踩后的显示效果，且现在一个用户只能为某一首歌点赞或点踩一次，无法重复 6.使用song_votes 表 + Redis Set 实时计数 + 冗余 likeCount/dislikeCount方式存储点赞点踩数据 7.抽取建立OssClient、拉取特定文件的过程,提高代码复用度 8.添加健康检查方法 9.给用户添加审计字段 10.docker compose文件添加log配置项

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,12 @@ services:
       - "8082:8082"
     depends_on:
       - redis
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "10"
+        compress: "true"
 
   frontend:
     build:
@@ -22,6 +28,11 @@ services:
       - "8081:80"              # 外部访问前端的端口（原先 nginx 映射 8081）
     depends_on:
       - spring
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "5"
 
   redis:
     image: redis:6.2
