--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,8 @@
 FROM maven:3.9-eclipse-temurin-22 AS builder
 WORKDIR /app
 COPY pom.xml .
+# 这步会缓存依赖，只有 pom.xml 变化时才重新下载
+RUN mvn dependency:go-offline -B
 COPY src ./src
 RUN mvn clean package -DskipTests
 
