--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,3 +1,8 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
+
 server {
     listen 80;
     server_name _;
@@ -44,16 +49,18 @@ server {
         proxy_read_timeout 120s;
     }
 
-    # WebSocket（如果后端有 websocket / STOMP / socket.io）
-    # 调整 path /ws/ 或按需改为 /socket.io/
+    # WebSocket
+    # 调整 path /ws/
     location /ws/ {
-        proxy_pass http://spring:8082;
+        proxy_pass http://spring:8082/ws/;
         proxy_http_version 1.1;
+
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
+        proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_read_timeout 3600s;
+        proxy_send_timeout 3600s;
     }
 
     # SPA fallback —— 所有非文件请求都返回 index.html（支持客户端路由）
