--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
 
   remote-deploy:
     runs-on: ubuntu-latest
-    needs: build-and-push
+#    needs: build-and-push
     steps:
       - name: Execute remote deploy script
         uses: appleboy/ssh-action@v1.0.0
