--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,6 +9,10 @@ RUN mvn clean package -DskipTests
 
 # 第二阶段：运行阶段
 FROM openjdk:22-jdk-slim
+# 设置时区为 Asia/Shanghai
+ENV TZ=Asia/Shanghai
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
 WORKDIR /app
 COPY --from=builder /app/target/*.jar app.jar
 EXPOSE 8082
