--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "chart.js": "^4.4.6",
     "markdown-it": "^14.1.0",
     "mitt": "^3.0.1",
     "pinia": "^3.0.3",
