将oss key相关敏感信息写入.env文件，更新 Git 忽略规则，将 application.properties 中的敏感值替换为环境变量占位符

--- a/ServerDeployment/docker-compose.yml
+++ b/ServerDeployment/docker-compose.yml
@@ -13,6 +13,9 @@ services:
       - app-network
     environment:
       - SPRING_PROFILES_ACTIVE=prod
+      - DB_PASSWORD
+      - ALIYUN_OSS_ACCESS_KEY
+      - ALIYUN_OSS_SECRET_KEY
     # 每次部署前拉取最新镜像
     deploy:
       update_config:
