--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -5,7 +5,24 @@ map $http_upgrade $connection_upgrade {
 
 server {
     listen 80;
-    server_name _;
+    server_name beemusic.fun www.beemusic.fun;
+    
+    # 强制跳转 HTTPS
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name beemusic.fun www.beemusic.fun;
+
+    # SSL 证书配置（需要挂载证书文件）
+    ssl_certificate /etc/nginx/certs/beemusic.fun.pem;
+    ssl_certificate_key /etc/nginx/certs/beemusic.fun.key;
+    
+    ssl_session_timeout 5m;
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
 
     # 根目录 —— nginx image 中静态文件的位置（我们在 Dockerfile 中把 dist 放在这里）
     root /usr/share/nginx/html;
