修改服务器部署配置文件，修复Mixed Content问题，添加HTTPS 的Origin

--- a/ServerDeployment/docker-compose.yml
+++ b/ServerDeployment/docker-compose.yml
@@ -27,7 +27,10 @@ services:
     container_name: nginx_frontend
     restart: always
     ports:
-      - "8081:80"
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./certs:/etc/nginx/certs
     depends_on:
       - spring
     networks:
