让阿里云 OSS 生成 HTTPS 的链接

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.sql.init.mode=never
 # ==============================
 # Aliyun OSS
 # ==============================
-aliyun.oss.endpoint=oss-cn-heyuan.aliyuncs.com
+aliyun.oss.endpoint=https://oss-cn-heyuan.aliyuncs.com
 aliyun.oss.bucket-name=bees-bucket
 aliyun.oss.access-key=${ALIYUN_OSS_ACCESS_KEY}
 aliyun.oss.secret-key=${ALIYUN_OSS_SECRET_KEY}
