--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -32,3 +32,10 @@ aliyun.oss.secret-key=${ALIYUN_OSS_SECRET_KEY}
 aliyun.oss.expiration-hours=24
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.session=DEBUG
+
+# ==============================
+# GZIP Compression
+# ==============================
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json,application/xml
+server.compression.min-response-size=1024
